versioned_docs/version-13.2.5/developers/visualisation-setup/index.mdx
---
sidebar_position: 4
---


import {ElectronIcon} from '@site/src/components/Icons';
import {Fragment} from 'react';

# 👁️‍🗨️ Visualisation setup

<Fragment>

:::warning
This parts does not explain module bundling with <ElectronIcon /> Electron.
It provides a basic setup to work with Front and Audio services.
:::

</Fragment>

## Setup

```bash
# Navigate to source root directory
cd sound-scape-explorer

# Install audio service
pnpm install:audio

# Install front service
pnpm install:front

# ---
# In 2 distinct terminals
# ---

# run
pnpm audio $(which ffmpeg) $(which ffprobe) /path/to/audio/folder

# and
pnpm front

# audio service is available at localhost:5531
# front service is available at localhost:5530
```

## Front file structure

```text
sound-scape-explorer/front/
├── public/ --> Static files
├── src/
│   ├── common/
│   ├── components/
│   ├── hooks/
│   ├── pages/
│   ├── storage/
│   ├── utils/
│   ├── workers/
│   ├── App.vue --> Entry component
│   └── main.ts --> Entry point
└── package.json
```
