versioned_docs/version-13.4.3/developers/visualisation-setup/index.mdx
---
sidebar_position: 4
---


import {ElectronIcon} from '@site/src/components/Icons';
import {Title} from '@site/src/components/Title';
import {Fragment} from 'react';
import {VERSION} from '../../env';

# 👁️‍🗨️ Visualisation setup

<Title
  pre={['👩‍💻 Developers']}
  title={'👁️‍🗨️ Visualisation setup'}
  version={VERSION}
/>

<Fragment>

:::warning
This parts does not explain module bundling with <ElectronIcon/> Electron.
It provides a basic setup to work with Front and Audio services.
:::

</Fragment>

## Setup

```bash
# Navigate to source root directory
cd sound-scape-explorer

# Install audio service
pnpm install:audio

# Install front service
pnpm install:front

# ---
# In 2 distinct terminals
# ---

# one for the front service localhost:5530
pnpm front

# the other for audio service localhost:5531
# examples for different systems below

# unix
pnpm audio $(which ffmpeg) $(which ffprobe) /path/to/audio/folder

# windows
pnpm audio C:\path\to\ffmpeg.exe C:\path\to\ffprobe.exe C:\path\to\audio\folder

# windows example for ffmpeg installed through choco
pnpm audio C:\ProgramData\chocolatey\lib\ffmpeg\tools\ffmpeg\bin\ffmpeg.exe C:\ProgramData\chocolatey\lib\ffmpeg\tools\ffmpeg\bin\ffprobe.exe C:\path\to\audio

# front service is available at localhost:5530
# audio service is available at localhost:5531
```

## Front file structure

```text
sound-scape-explorer/front/
├── public/ --> Static files
├── src/
│   ├── common/
│   ├── components/
│   ├── hooks/
│   ├── pages/
│   ├── storage/
│   ├── utils/
│   ├── workers/
│   ├── App.vue --> Entry component
│   └── main.ts --> Entry point
└── package.json
```
